--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "electron": "8.0.0",
     "electron-builder": "^22.3.2",
     "file-loader": "^5.0.2",
-    "happypack": "^5.0.1",
     "hash-sum": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
@@ -124,6 +123,12 @@
       "provider": "generic",
       "url": "http://localhost/release/electron-vue/",
       "updaterCacheDirName": "electron-updater"
+    },
+    "webpack": {
+      "devServer": {
+        "port": 8082,
+        "contentBase": "dist/webpack"
+      }
     }
   }
 }
